--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,7 @@
 #-------------------------------------------------------------------------------------------------------------
 
 #FROM mcr.microsoft.com/vscode/devcontainers/base:0-debian-9
-FROM emscripten/emsdk:3.1.27
+FROM --platform=linux/amd64 emscripten/emsdk:3.1.27
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
